# Py-BOLD

./: .gitignore  MEDIUM_ARTICLE.md  README.md  poc_tracer_bullet.py  pyproject.toml
examples/: generated_module.py  test_generated.py
samples/: customer_calc.cbl
src/pybold/: __init__.py
src/pybold/agents/: __init__.py  workflow.py
src/pybold/graph/: dfg_builder.py
src/pybold/parser/: ast_nodes.py  ast_printer.py  cobol_parser.py  lexer.py
tests/: conftest.py  helpers.py  test_dfg.py
tests/test_parser/: test_ast_generation.py  test_lexer_edge_cases.py
